# py-pdf

./: .gitignore  README.md  note.md  pyproject.toml  ruff.toml
scripts/: make-booklet.bat  split-booklet.bat  stat-pages.bat
src/py_pdf/: add_pagenum.py  booklet.py  common.py  outline.py  paper.py  stat_page.py  stat_pages.py  statpage.py  test_utils.py  utils.py
src/py_pdf/_com/: __init__.py
src/py_pdf/booklet/: __init__.py  booklet.py  main.py  test_booklet.py
src/py_pdf/outline/: __init__.py  cli.py  core.py  outline.py  parser.py
src/py_pdf/pagenum/: __init__.py  cli.py  config.py  core.py  font.py  text.py
src/tests/: split_then_merge.py
tests/: .gitignore  test_common.py  test_outline.py  test_statpage.py  test_utils.py
tests/sample/: A3-booklet.docx  A3-paper.docx  A4.docx  outline.docx  outline.txt
tests/test_addpagenum/: config.toml  config_3.toml  config_4.toml  config_5.toml  config_6.toml  config_7.toml  config_8.toml  test_addpagenum.py
tests/test_booklet/: test_booklet.py
tests/test_outline/: test_core.py  test_parser.py
