[project]
name = "py-pdf"
version = "0.1.4"
description = "PDF processing toolkits"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.12"
dependencies = ["pypdf>=5.1.0", "reportlab>=4.2.5"]

[project.scripts]
booklet = "py_pdf.booklet:main"
statpage = "py_pdf.statpage:main"
paper = "py_pdf.paper:main"
addpn = "py_pdf.add_pagenum:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.4"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
